--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -29,7 +29,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                tools:ignore="DuplicateIds">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardView"
@@ -45,7 +46,7 @@
                     app:cardBackgroundColor="?attr/cardbackground"
                     app:cardPreventCornerOverlap="true"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
+                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="MissingConstraints">
@@ -122,7 +123,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/constraintLayout3"
+                    android:id="@+id/constraintLayout"
                     android:layout_width="0dp"
                     android:layout_height="220dp"
                     android:orientation="vertical"
@@ -133,7 +134,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
-                        android:id="@+id/tvAdSoyad"
+                        android:id="@+id/mtvNameSurname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -145,11 +146,11 @@
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/navUserPhoto"
+                        app:layout_constraintTop_toBottomOf="@+id/navOfferPhoto"
                         tools:ignore="MissingConstraints" />
 
                     <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/navUserPhoto"
+                        android:id="@+id/navOfferPhoto"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_gravity="center_horizontal"
@@ -157,7 +158,7 @@
                         android:layout_marginBottom="32dp"
                         android:src="@drawable/userphoto"
                         app:civ_border_width="1dp"
-                        app:layout_constraintBottom_toTopOf="@+id/tvAdSoyad"
+                        app:layout_constraintBottom_toTopOf="@+id/mtvNameSurname"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -218,8 +219,8 @@
                 android:id="@+id/ivWebSite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="TODO"
-                android:src="@drawable/ic_public_black_24dp" />
+                android:src="@drawable/ic_public_black_24dp"
+                android:contentDescription="TODO" />
 
             <TextView
                 android:id="@+id/tvWebSite"
@@ -332,7 +333,6 @@
                 android:id="@+id/ivNightMode"
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
-                android:contentDescription="TODO"
                 android:src="@drawable/ic_camera_night_mode" />
 
             <Switch
@@ -344,7 +344,6 @@
                 android:checked="false"
                 android:fontFamily="@font/abeezee"
                 android:text="@string/gece_modu"
-                android:textAlignment="textStart"
                 android:textAllCaps="false"
                 android:textColor="?attr/textcolor" />
 
