--- a/app/src/main/res/layout/offer_layout.xml
+++ b/app/src/main/res/layout/offer_layout.xml
@@ -3,14 +3,16 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/offer_cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="5dp"
     android:layout_margin="3dp"
     app:cardBackgroundColor="?attr/cardbackground"
+    app:cardCornerRadius="5dp"
     app:cardPreventCornerOverlap="true">
 
     <LinearLayout
+        android:id="@+id/offerLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:baselineAligned="false"
@@ -53,7 +55,7 @@
                 tools:ignore="SmallSp" />
 
             <TextView
-                android:id="@+id/tvAdSoyad"
+                android:id="@+id/mtvNameSurname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
@@ -101,7 +103,7 @@
 
 
             <TextView
-                android:id="@+id/tvIlce"
+                android:id="@+id/mTtvIlce"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
@@ -117,7 +119,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 
 </androidx.cardview.widget.CardView>
