--- a/app/src/main/res/layout-land/fragment_account.xml
+++ b/app/src/main/res/layout-land/fragment_account.xml
@@ -45,7 +45,7 @@
                     app:civ_border_width="1dp" />
 
                 <TextView
-                    android:id="@+id/mtvNameSurname"
+                    android:id="@+id/tvUserNameSurname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
