--- a/app/src/main/res/layout/custom_dialog_style1.xml
+++ b/app/src/main/res/layout/custom_dialog_style1.xml
@@ -12,11 +12,11 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp"
-        android:background="?attr/cardbackground"
+        android:background="?attr/cardBackground"
         >
 
         <RelativeLayout
-            android:background="?attr/cardbackground"
+            android:background="?attr/cardBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
