--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="ds">
-        <attr name="backgroundcolor" format="color"></attr>
-        <attr name="cardbackground" format="color"></attr>
-        <attr name="colorPrimaryDark" format="color"></attr>
+        <attr name="backgroundColor" format="color" />
+        <attr name="cardBackground" format="color" />
+        <attr name="colorPrimaryDark" format="color" />
         <attr name="textcolor" format="color"></attr>
         <attr name="tintcolor" format="color"></attr>
         <attr name="buttoncolor" format="color"></attr>
@@ -13,8 +13,5 @@
         <attr name="accountcolor" format="color"></attr>
         <attr name="bubleButtomcolor" format="color"></attr>
         <attr name="offerDetailTextColor" format="color"></attr>
-
-
-
     </declare-styleable>
 </resources>
