--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -6,48 +6,81 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Activity.MessageActivity">
 
-    <include
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/toolbarcolor"
+        android:elevation="5dp"
+        android:fadeScrollbars="true"
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"></include>
+        android:minHeight="50dp"
+        android:textAlignment="center"
+        app:theme="@style/ToolbarName">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/profile_image"/>
+
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/abeezee"
+            android:textSize="18sp"
+            android:layout_marginStart="25dp"
+            android:gravity="left"
+            android:text="@string/mesajlar"
+            android:textColor="@color/white" />
+    </androidx.appcompat.widget.Toolbar>
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerview"
+        android:background="?attr/backgroundColor"
         android:layout_below="@id/toolbar"
         android:layout_above="@id/relative_bottom">
 
 
     </androidx.recyclerview.widget.RecyclerView>
-    
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:padding="5dp"
         android:id="@+id/relative_bottom"
-        android:background="#FFFF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_height="wrap_content">
+        android:background="?attr/backgroundColor"
+        android:elevation="50dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="5dp">
 
         <EditText
             android:id="@+id/etMessageSend"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/btn_send"
+            android:background="@drawable/message_btn_style"
             android:fontFamily="@font/abeezee"
             android:hint="@string/mesaj_yazma"
+            android:paddingLeft="10dp"
             android:textAlignment="textStart"
             android:textSize="14sp" />
 
 
         <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/ic_send_black_24dp"
             android:id="@+id/btn_send"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:background="@drawable/ic_send_black_24dp"
+            android:onClick="btnSend" />
     </RelativeLayout>
 
 
