slider added. viewpager added. Message added.

--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -10,23 +10,17 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/message_btn_style"
+            android:background="@drawable/background_right"
             android:text="@string/textview"
             android:layout_alignParentEnd="true"
             android:id="@+id/show_message"
-            android:textSize="10sp"
-            android:textColor="?attr/textcolor"
-            android:padding="8dp"
-            android:layout_alignParentRight="true"/>
+            android:fontFamily="@font/abeezee"
+            android:textSize="14sp"
+            android:textColor="@color/quantum_black_100"
+            android:padding="8dp" />
 
     </RelativeLayout>
 </RelativeLayout>
