--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -18,10 +18,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recyclerview"
+            android:id="@+id/recycler_view"
             android:layout_below="@id/toolbar"
-            android:background="?attr/backgroundColor"
-            android:layout_above="@id/relative_bottom">
+            android:background="?attr/backgroundColor">
 
 
         </androidx.recyclerview.widget.RecyclerView>
