--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -6,43 +6,57 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Activity.MessageActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbarLayout"
         android:background="?attr/toolbarcolor"
-        android:elevation="5dp"
-        android:fadeScrollbars="true"
-        android:id="@+id/toolbar"
-        android:minHeight="50dp"
-        android:textAlignment="center"
-        app:theme="@style/ToolbarName">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/profile_image"/>
-
-        <TextView
-            android:id="@+id/username"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/abeezee"
-            android:textSize="18sp"
-            android:layout_marginStart="25dp"
-            android:gravity="left"
-            android:text="@string/mesajlar"
-            android:textColor="@color/white" />
-    </androidx.appcompat.widget.Toolbar>
+            android:background="?attr/toolbarcolor"
+            android:elevation="5dp"
+            android:fadeScrollbars="true"
+            android:id="@+id/toolbar"
+            android:minHeight="50dp"
+            android:textAlignment="center"
+            app:theme="@style/ToolbarName">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="45dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:fontFamily="@font/abeezee"
+                android:text="@string/mesajlar"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:ignore="RtlHardcoded" />
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mRecyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recyclerview"
-        android:background="?attr/backgroundColor"
-        android:layout_below="@id/toolbar"
-        android:layout_above="@id/relative_bottom">
+        android:layout_above="@id/relative_bottom"
+        android:layout_below="@id/appbarLayout"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="false"
+        android:background="?attr/backgroundColor">
 
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -57,7 +71,7 @@
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
         android:paddingRight="10dp"
-        android:paddingBottom="5dp">
+        android:paddingBottom="10dp">
 
         <EditText
             android:id="@+id/etMessageSend"
