--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -14,17 +14,14 @@
             android:id="@+id/show_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/message_btn_style"
+            android:background="@drawable/background_left"
             android:padding="8dp"
             android:text="@string/textview"
-            android:textColor="?attr/textcolor"
-            android:textSize="10sp" />
+            android:fontFamily="@font/abeezee"
+            android:textColor="@color/quantum_black_100"
+            android:textSize="14sp" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
+
 
     </RelativeLayout>
 </RelativeLayout>
