--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,12 +17,10 @@
         <item name="offerlayoutcolor">@color/quantum_black_100</item>
         <item name="bubleButtomcolor">#ffffffff</item>
         <item name="offerDetailTextColor">@color/quantum_bluegrey50</item>
-        <item name="android:windowAnimationStyle">@style/WindowsAnimationTransition</item>
-
+        <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="darktheme" parent="Theme.AppCompat.Light.DarkActionBar">
-
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimaryDarkMode</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -39,7 +37,7 @@
         <item name="bubleButtomcolor">#424242</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:windowAnimationStyle">@style/WindowsAnimationTransition</item>
+        <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="WindowsAnimationTransition">
