--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -11,16 +11,25 @@
         android:layout_alignParentRight="true">
 
         <TextView
+            android:id="@+id/show_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_right"
-            android:text="@string/textview"
             android:layout_alignParentEnd="true"
-            android:id="@+id/show_message"
+            android:background="@drawable/background_right"
             android:fontFamily="@font/abeezee"
-            android:textSize="14sp"
+            android:padding="8dp"
+            android:text="@string/textview"
             android:textColor="@color/quantum_black_100"
-            android:padding="8dp" />
-
+            android:textSize="18sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_seen"
+            android:text="@string/seen"
+            android:textSize="10sp"
+            android:textColor="?attr/textcolor"
+            android:layout_below="@+id/show_message"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
     </RelativeLayout>
 </RelativeLayout>
