--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Fragment.MessageFragment">
 
-
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -15,11 +13,34 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar"></include>
 
+        <RelativeLayout
+            android:id="@+id/relative_bottom"
+            android:layout_width="match_parent"
+            android:background="?attr/backgroundColor"
+            android:layout_below="@+id/toolbar"
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/search_message"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="70dp"
+                android:layout_marginTop="7dp"
+                android:padding="8dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/message_btn_style"
+                android:hint="Search">
+
+            </EditText>
+
+        </RelativeLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/recycler_view"
-            android:layout_below="@id/toolbar"
+            android:layout_below="@id/relative_bottom"
             android:background="?attr/backgroundColor">
 
 
